--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -3,9 +3,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="icon" href="../../assets/img/ico/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="../../assets/css/all.min.css" />
+    <link rel="stylesheet" href="../../assets/css/core.min.css" />
   </head>
   <body>
-    {{{body}}}
+    <div class="row d-flex justify-content-center align-items-center my-5">
+      <div class="col-lg-6 col-md-4">
+        <div class="card">
+          <div class="card-body">
+            {{{body}}}
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
-  <script type="module" src="../../assets/js/main.js"></script>
+  <script type="text/javascript" src="../../assets/js/core.min.js"></script>
+  <script type="text/javascript" src="../../assets/js/module.min.js"></script>
+  {{#each scripts}}
+    <script type="text/javascript" src="../../assets/js/{{this}}.js"></script>
+  {{/each}}
 </html>
