--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,2 +1,7 @@
-<h1>{{title}}</h1>
-<p>{{message}}</p>
+<h1 class="w-100 text-center">{{title}}</h1>
+<p class="w-100 text-center">
+  {{message}}
+</p>
+<div class="d-flex justify-content-end">
+  <a href="/login" class="btn btn-primary">join</a>
+</div>
