--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -8,15 +8,17 @@
     <link rel="stylesheet" href="../../assets/css/core.min.css" />
   </head>
   <body>
-    <div class="row d-flex justify-content-center align-items-center my-5">
-      <div class="col-lg-6 col-md-4">
-        <div class="card">
-          <div class="card-body">
-            {{{body}}}
+    <section class="container-fluid">
+      <div class="row d-flex justify-content-center align-items-center my-5">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <div class="card border border-primary shadow">
+            <div class="card-body">
+              {{{body}}}
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
   </body>
   <script type="text/javascript" src="../../assets/js/core.min.js"></script>
   <script type="text/javascript" src="../../assets/js/module.min.js"></script>
