--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,2 +1,28 @@
-<h1>{{title}}</h1>
-<p>{{message}}</p>
+<form action="/login" method="post">
+  <h1 class="w-100 text-end">{{title}}</h1>
+  <p class="w-100 text-end">{{message}}</p>
+  <!-- Email input -->
+  <div class="form-outline mb-4">
+    <input type="email" id="email" name="email" class="form-control" required />
+    <label class="form-label" for="email">Email address</label>
+  </div>
+
+  <!-- Password input -->
+  <div class="form-outline mb-4">
+    <input type="password" id="password" name="password" class="form-control" required />
+    <label class="form-label" for="password">Password</label>
+  </div>
+
+  <!-- 2 column grid layout for inline styling -->
+  <div class="row mb-4">
+    <div class="col d-flex justify-content-end">
+      <!-- Simple link -->
+      want become a member?
+      <a class="ms-2" href="/register">Sign up.</a>
+    </div>
+  </div>
+  <div class="d-flex justify-content-end">
+    <!-- Submit button -->
+    <button type="submit" class="btn btn-primary ">Sign in</button>
+  </div>
+</form>
