--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -2,6 +2,7 @@
 <p class="w-100 text-center">
   {{message}}
 </p>
-<div class="d-flex justify-content-end">
+<div class="d-flex justify-content-between align-items-center">
+  <a href="/items" class="btn btn-primary">items</a>
   <a href="/login" class="btn btn-primary">join</a>
 </div>
