--- a/src/views/items.hbs
+++ b/src/views/items.hbs
@@ -18,15 +18,23 @@
     <button type="submit" class="btn btn-primary">Save</button>
   </div>
 </form>
-<ul class="list-group list-group-light w-100">
+<div class="row g-4">
   {{#each items}}
-    <li class="list-group-item d-flex justify-content-between">
-      {{this.name}}
-      {{this.description}}
-      <form action="/items/{{this._id}}" method="POST">
-        <input type="hidden" name="_method" value="DELETE">
-        <button class="btn btn-link" type="submit">delete</button>
+    <div class="col-6 h-100">
+      <form action="/items/{{this._id}}?_method=PUT" method="POST">
+        <div class="form-outline mb-2">
+          <input type="text" id="name" name="name" class="form-control" required value="{{this.name}}" />
+          <label class="form-label" for="name">Name</label>
+        </div>
+        <div class="form-outline mb-2">
+          <input type="text" id="description" name="description" class="form-control" required value="{{this.description}}" />
+          <label class="form-label" for="description">Description</label>
+        </div>
+        <button class="btn btn-secondary w-100" type="submit">Update</button>
       </form>
-    </li>
+      <form action="/items/{{this._id}}?_method=DELETE" method="POST" class="w-100">
+        <button class="btn btn-danger w-100" type="submit">Delete</button>
+      </form>
+    </div>
   {{/each}}
-</ul>
+</div>
