--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,8 +1,52 @@
-<h1 class="w-100 text-center">{{title}}</h1>
-<p class="w-100 text-center">
-  {{message}}
-</p>
-<div class="d-flex justify-content-between align-items-center">
-  <a href="/items" class="btn btn-primary">items</a>
-  <a href="/login" class="btn btn-primary">join</a>
-</div>
+<section class="background-radial-gradient overflow-hidden">
+  <div class="container py-5 px-md-5 text-center text-lg-start">
+    <div class="row gx-lg-5 align-items-center mb-5">
+      <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
+        <h1 class="my-5 display-5 fw-bold ls-tight text-primary">
+          <span class="text-warning">Total Productive Maintenance (TPM)</span>
+        </h1>
+        <p class="mb-4 opacity-70">
+          Total Productive Maintenance (TPM) is a management approach focused on maximizing the efficiency and effectiveness of production processes in manufacturing industries. It aims to achieve zero breakdowns, zero defects, and zero accidents by
+          involving all employees in the maintenance of equipment and machinery.
+        </p>
+      </div>
+
+      <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
+        <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+        <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+        <div class="d-flex justify-content-center align-items-center flex-column h-100">
+          <div class="card text-center shadow shadow-3-strong">
+
+            <div class="card-body text-start">
+
+              <p class="card-text">
+                Discover a world of Total Productive Maintenance (TPM), designed just for you. By signing up, you’ll gain access to:
+                <ul class="list-unstyled">
+                  <li class="mb-1">
+                    <i class="fas fa-check-circle me-2 text-success"></i><strong>Exclusive Content</strong>: Stay ahead with the latest updates, expert insights, and best practices in TPM.
+                  </li>
+                  <li class="mb-1">
+                    <i class="fas fa-check-circle me-2 text-success"></i><strong>Personalized Experience</strong>: Tailor your experience to fit your specific maintenance needs and goals.
+                  </li>
+                  <li class="mb-1">
+                    <i class="fas fa-check-circle me-2 text-success"></i><strong>Community Support</strong>: Connect with industry professionals and share your TPM journey.
+                  </li>
+                  <li class="mb-1">
+                    <i class="fas fa-check-circle me-2 text-success"></i><strong>Special Offers</strong>: Enjoy exclusive deals and discounts on TPM resources, training, and tools.
+                  </li>
+                </ul>
+                Join us today and be part of a thriving community that values efficiency, productivity, and continuous improvement in maintenance.
+              </p>
+
+              <h5 class="card-title">Dont miss out—sign up now and start enjoying all the perks we have to offer!</h5>
+              <div class="text-center">
+                <a href="/login" class="btn btn-primary">join us</a>
+              </div>
+            </div>
+            <div class="card-footer text-muted">© 2024 Copyright: <span class="fw-bold text-muted">karimroy</span></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
