--- a/src/views/items.hbs
+++ b/src/views/items.hbs
@@ -9,12 +9,12 @@
 
   <!-- Password input -->
   <div class="form-outline mb-4">
-    <textarea class="form-control" id="description" name="description" rows="3"></textarea>
+    <textarea class="form-control" id="description" name="description" rows="3" required></textarea>
     <label class="form-label" for="description">Description</label>
   </div>
 
+  <!-- Submit button -->
   <div class="d-flex justify-content-end">
-    <!-- Submit button -->
     <button type="submit" class="btn btn-primary">Save</button>
   </div>
 </form>
