--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -1,28 +1,187 @@
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="icon" href="../../assets/img/ico/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="../../assets/css/all.min.css" />
-    <link rel="stylesheet" href="../../assets/css/core.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <title>TPM Total Productive Maintenance</title>
+    <!-- Search Engine -->
+    <meta name="description" content="Form TPM, PAVSE DIGITAL" />
+    <meta name="image" content="../assets/img/ico/android-chrome-192x192.png" />
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="PAVSE DIGITAL" />
+    <meta itemprop="description" content="Form TPM, PAVSE DIGITAL" />
+    <meta itemprop="image" content="../assets/img/ico/android-chrome-192x192.png" />
+    <!-- Open Graph general (Facebook, Pinterest & LinkedIn) -->
+    <meta property="og:title" content="PAVSE DIGITAL" />
+    <meta property="og:description" content="Form TPM, PAVSE DIGITAL " />
+    <meta property="og:image" content="../assets/img/ico/android-chrome-192x192.png" />
+    <meta property="og:url" content="../assets" />
+    <meta property="og:site_name" content="PAVSE DIGITAL" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website" />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:title" content="PAVSE DIGITAL" />
+    <meta property="twitter:description" content="Form TPM, PAVSE DIGITAL" />
+    <meta property="twitter:image:src" content="../assets/img/ico/android-chrome-192x192.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/ico/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/ico/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/ico/favicon-16x16.png" />
+    <link rel="manifest" href="../assets/img/ico/site.webmanifest" />
+    <link rel="icon" href="img/ico/favicon-32x32.png" type="image/x-icon" />
+    <link rel="icon" href="../assets/img/ico/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="../assets/css/all.min.css" />
+    <link rel="stylesheet" href="../assets/css/core.min.css" />
+    <link rel="stylesheet" href="../assets/css/background.min.css" />
   </head>
-  <body>
-    <section class="container-fluid">
-      <div class="row d-flex justify-content-center align-items-center my-5">
-        <div class="col-lg-6 col-md-6 col-sm-12">
-          <div class="card border border-primary shadow">
-            <div class="card-body">
-              {{{body}}}
+
+  <body style="background-color: #e8eaf6" class="" data-event-name="{{eventName}}">
+    <!-- Background image -->
+    <svg id="svg" viewBox="0 0 1440 390" xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150 svg position-absolute d-none d-lg-block overflow-hidden w-100">
+      <path
+        d="M 0,400 C 0,400 0,133 0,133 C 83.54066985645932,134.22488038277513 167.08133971291863,135.44976076555025 264,142 C 360.91866028708137,148.55023923444975 471.2153110047848,160.42583732057417 571,144 C 670.7846889952152,127.57416267942583 760.0574162679425,82.84688995215312 856,86 C 951.9425837320575,89.15311004784688 1054.555023923445,140.18660287081337 1153,156 C 1251.444976076555,171.81339712918663 1345.7224880382773,152.4066985645933 1440,133 C 1440,133 1440,400 1440,400 Z"
+        stroke="none"
+        stroke-width="0"
+        fill="#8ed1fc"
+        fill-opacity="0.53"
+        class="transition-all duration-300 ease-in-out delay-150 path-0"
+        transform="rotate(-180 720 200)"
+      ></path>
+
+      <path
+        d="M 0,400 C 0,400 0,266 0,266 C 89.69377990430621,265.82775119617224 179.38755980861242,265.6555023923445 275,266 C 370.6124401913876,266.3444976076555 472.1435406698564,267.2057416267943 583,274 C 693.8564593301436,280.7942583732057 814.0382775119618,293.5215311004784 908,299 C 1001.9617224880382,304.4784688995216 1069.7033492822966,302.7081339712919 1154,296 C 1238.2966507177034,289.2918660287081 1339.1483253588517,277.64593301435406 1440,266 C 1440,266 1440,400 1440,400 Z"
+        stroke="none"
+        stroke-width="0"
+        fill="#8ed1fc"
+        fill-opacity="1"
+        class="transition-all duration-300 ease-in-out delay-150 path-1"
+        transform="rotate(-180 720 200)"
+      ></path>
+    </svg>
+    <!-- Background image -->
+    {{#if sidebar}}
+      <!--Main Navigation-->
+      <header>
+        <!-- Sidenav -->
+        <nav id="sidenav" class="sidenav" data-psa-color="dark" data-psa-mode="side" data-psa-hidden="false" data-psa-scroll-container="#scrollContainer" data-psa-content="#content">
+          <div class="mt-4">
+            <div id="header-content" class="ps-2">
+              <div id="name" style="white-space: nowrap; text-transform: uppercase"></div>
+              <div class="small text-muted" id="nik" style="text-transform: uppercase"></div>
+              <div class="small text-muted" id="email"></div>
             </div>
+            <hr class="mb-0" />
           </div>
+          <div id="scrollContainer">
+            <ul class="sidenav-menu">
+              <li class="sidenav-item">
+                <a class="sidenav-link" href="/dashboard"> <i class="fa-duotone fa-gauge fa-fw me-3"></i>Dashboard</a>
+              </li>
+              <li class="sidenav-item">
+                <a class="sidenav-link" href="/transfer"> <i class="fa-duotone fa-arrow-right-arrow-left fa-fw me-3"></i>Transfer</a>
+              </li>
+              <li class="sidenav-item">
+                <a class="sidenav-link" href="/Service"> <i class="fa-duotone fa-screwdriver-wrench fa-fw me-3"></i>Service</a>
+              </li>
+              <li class="sidenav-item">
+                <a class="sidenav-link" href="/asset"> <i class="fa-duotone fa-box fa-fw me-3"></i>Asset</a>
+              </li>
+            </ul>
+            <hr class="m-0" />
+            <ul class="sidenav-menu">
+              <li class="sidenav-item">
+                <a class="sidenav-link" href="/user"> <i class="fa-duotone fa-user fa-fw me-3"></i>User Panel</a>
+              </li>
+              <li class="sidenav-item" id="button-signout">
+                <a href="/logout" class="sidenav-link"> <i class="fa-duotone fa-user-astronaut fa-fw me-3 pe-none"></i>Log out</a>
+              </li>
+            </ul>
+          </div>
+          <div class="text-center" style="height: 100px">
+            <hr class="mb-4 mt-0" />
+            <p class="small"> TPM Web App</p>
+          </div>
+        </nav>
+        <!-- Sidenav -->
+
+        <!-- Navbar -->
+        <nav id="content" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+          <!-- Container wrapper -->
+          <div class="container-fluid">
+            <!-- Toggle button -->
+            <!-- Togglers -->
+            <div id="toggler">
+              <button data-psa-toggle="sidenav" data-psa-target="#sidenav" class="navbar-toggler d-lg-none" aria-controls="#sidenav" aria-haspopup="true">
+                <i class="fa-solid fa-bars"></i>
+              </button>
+              <button id="slim-toggler" class="navbar-toggler d-lg-block d-none">
+                <i class="fa-duotone fa-bars"></i>
+              </button>
+            </div>
+            <!-- Togglers -->
+
+            <!-- Brand -->
+            <a class="navbar-brand" href="/dashboard">
+              <!-- <img src="img/ico/favicon-32x32.png" height="25" alt="MDB Logo" loading="lazy" /> -->
+              <div class="fw-bold"><span class="text-primary"></span> TPM - {{title}}</div>
+            </a>
+
+            <!-- Right links -->
+            <ul class="navbar-nav ms-auto d-flex flex-row">
+              <!-- Notification dropdown -->
+              <li class="nav-item dropdown">
+                <a class="nav-link me-3 me-lg-0 dropdown-toggle hidden-arrow" href="#" id="navbarDropdownMenuLink" role="button" data-psa-toggle="dropdown" aria-expanded="false">
+                  <i class="fa-duotone fa-bell"></i>
+                  <span id="inbox-count" class=""></span>
+                </a>
+                <ul id="inbox-content" class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
+                  <li>
+                    <a class="dropdown-item" href="#"></a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <!-- Container wrapper -->
+        </nav>
+        <!-- Navbar -->
+      </header>
+      <!--Main Navigation-->
+    {{/if}}
+
+    <main class="container">
+      {{{body}}}
+    </main>
+
+  </body>
+
+  <div class="modal fade" id="modalAlert" tabindex="-1" aria-labelledby="modalAlertLabel" aria-hidden="true">
+    <div class="modal-dialog modal-side modal-top-right modal-sm">
+      <div class="modal-content">
+        <div class="modal-header p-2 bg-primary text-white">
+          <h5 class="modal-title" id="modalAlertLabel"></h5>
+          <button type="button" class="btn-close" data-psa-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body p-2" id="modalAlertBody"></div>
+      </div>
+    </div>
+  </div>
+  <div class="modal" id="alertModal" tabindex="-1" aria-labelledby="alertModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-fullscreen" style="background: transparent">
+      <div class="modal-content" style="background: transparent">
+        <div class="modal-body d-flex justify-content-center align-items-center flex-column">
+          <div class="spinner-border text-gray mb-3" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+          <small class="text-light" id="modal-content">Please wait...</small>
         </div>
       </div>
-    </section>
-  </body>
-  <script type="text/javascript" src="../../assets/js/core.min.js"></script>
-  <script type="text/javascript" src="../../assets/js/module.min.js"></script>
+    </div>
+  </div>
+  <script type="module" src="../assets/js/main.js"></script>
   {{#each scripts}}
-    <script type="text/javascript" src="../../assets/js/{{this}}.js"></script>
+    <script defer type="module" src="../assets/js/pages/{{this}}.js"></script>
   {{/each}}
+
 </html>
