--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,28 +1,64 @@
-<form action="/login" method="post">
-  <h1 class="w-100 text-end">{{title}}</h1>
-  <p class="w-100 text-end">{{message}}</p>
-  <!-- Email input -->
-  <div class="form-outline mb-4">
-    <input type="email" id="email" name="email" class="form-control" required />
-    <label class="form-label" for="email">Email address</label>
-  </div>
+<section class="background-radial-gradient overflow-hidden">
+  <div class="container py-5 px-md-5 text-center text-lg-start">
+    <div class="row gx-lg-5 align-items-center mb-5">
+      <div class="order-2 order-md-1 col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
+        <h1 class="my-5 display-5 fw-bold ls-tight text-primary">
+          <span class="text-warning">Total Productive Maintenance (TPM)</span>
+        </h1>
+        <p class="mb-4 opacity-70">
+          Total Productive Maintenance (TPM) is a management approach focused on maximizing the efficiency and effectiveness of production processes in manufacturing industries. It aims to achieve zero breakdowns, zero defects, and zero accidents by
+          involving all employees in the maintenance of equipment and machinery.
+        </p>
+      </div>
 
-  <!-- Password input -->
-  <div class="form-outline mb-4">
-    <input type="password" id="password" name="password" class="form-control" required />
-    <label class="form-label" for="password">Password</label>
-  </div>
+      <div class="order-1 order-md-2 col-lg-6 mb-5 mb-lg-0 position-relative">
+        <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+        <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+        <div class="d-flex justify-content-center align-items-center flex-column h-100">
+          <div class="card text-center shadow shadow-3-strong w-100 h-100">
+            <div class="card-body text-start">
+              <h1 class="w-100 text-end">{{title}}</h1>
+              <p class="w-100 text-end">{{message}}</p>
+              <form action="/login" method="post">
+                <!-- Email input -->
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <input type="email" id="email" name="email" class="form-control" />
+                  <label class="form-label" for="email">Email address</label>
+                </div>
 
-  <!-- 2 column grid layout for inline styling -->
-  <div class="row mb-4">
-    <div class="col d-flex justify-content-end">
-      <!-- Simple link -->
-      want become a member?
-      <a class="ms-2" href="/register">Sign up.</a>
+                <!-- Password input -->
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <input type="password" id="password" name="password" class="form-control" />
+                  <label class="form-label" for="password">Password</label>
+                </div>
+
+                <!-- 2 column grid layout for inline styling -->
+                <div class="row mb-4">
+                  <div class="col d-flex justify-content-center">
+                    <!-- Checkbox -->
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" value="" id="remember" name="remember" checked />
+                      <label class="form-check-label" for="remember"> Remember me </label>
+                    </div>
+                  </div>
+
+                  <div class="col">
+                    <!-- Simple link -->
+                    <a href="/forgot_password">Forgot password?</a>
+                  </div>
+                </div>
+
+                <!-- Submit button -->
+                <button data-mdb-ripple-init type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
+                <!-- Register buttons -->
+                <div class="text-center">
+                  <p>Not a member? <a href="/register">Sign up</a></p>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="d-flex justify-content-end">
-    <!-- Submit button -->
-    <button type="submit" class="btn btn-primary ">Sign in</button>
-  </div>
-</form>
+</section>
