--- a/src/views/assets.hbs
+++ b/src/views/assets.hbs
@@ -20,7 +20,7 @@
               <ol id="data-assets"></ol>
             </div>
             <div class="card-footer">
-              <button type="submit" class="btn btn-primary" disabled>Submit</button>
+              <button type="submit" class="btn btn-primary">Submit</button>
             </div>
           </form>
         </div>
