--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -33,8 +33,8 @@
                 </div>
 
                 <!-- 2 column grid layout for inline styling -->
-                <div class="row mb-4">
-                  <div class="col d-flex justify-content-center">
+                <div class="row mb-4 d-flex justify-content-between">
+                  <div class="col d-flex justify-content-start">
                     <!-- Checkbox -->
                     <div class="form-check">
                       <input class="form-check-input" type="checkbox" value="" id="remember" name="remember" checked />
@@ -42,7 +42,7 @@
                     </div>
                   </div>
 
-                  <div class="col">
+                  <div class="col text-end">
                     <!-- Simple link -->
                     <a href="/forgot_password">Forgot password?</a>
                   </div>
