--- a/src/views/items.hbs
+++ b/src/views/items.hbs
@@ -1,40 +1,5 @@
-<h1 class="w-100 text-end">{{title}}</h1>
-<p class="w-100 text-end">{{message}}</p>
-<form action="/items" method="post">
-  <!-- Email input -->
-  <div class="form-outline mb-4">
-    <input type="text" id="name" name="name" class="form-control" required />
-    <label class="form-label" for="name">Name</label>
-  </div>
+<main id="content" style="margin-top: 58px">
+  <section class="container my-5 py-2">
 
-  <!-- Password input -->
-  <div class="form-outline mb-4">
-    <textarea class="form-control" id="description" name="description" rows="3" required></textarea>
-    <label class="form-label" for="description">Description</label>
-  </div>
-
-  <!-- Submit button -->
-  <div class="d-flex justify-content-end">
-    <button type="submit" class="btn btn-primary">Save</button>
-  </div>
-</form>
-<div class="row g-4">
-  {{#each items}}
-    <div class="col-6 h-100">
-      <form action="/items/{{this._id}}?_method=PUT" method="POST">
-        <div class="form-outline mb-2">
-          <input type="text" id="name" name="name" class="form-control" required value="{{this.name}}" />
-          <label class="form-label" for="name">Name</label>
-        </div>
-        <div class="form-outline mb-2">
-          <input type="text" id="description" name="description" class="form-control" required value="{{this.description}}" />
-          <label class="form-label" for="description">Description</label>
-        </div>
-        <button class="btn btn-secondary w-100" type="submit">Update</button>
-      </form>
-      <form action="/items/{{this._id}}?_method=DELETE" method="POST" class="w-100">
-        <button class="btn btn-danger w-100" type="submit">Delete</button>
-      </form>
-    </div>
-  {{/each}}
-</div>
+  </section>
+</main>
