--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,7 +1,7 @@
-<section class="background-radial-gradient overflow-hidden">
-  <div class="container py-5 px-md-5 text-center text-lg-start">
-    <div class="row gx-lg-5 align-items-center mb-5">
-      <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
+<section class="background-radial-gradient overflow-hidden p-md-5 py-5">
+  <div class="container p-md-5">
+    <div class="row g-lg-4 align-items-center p-md-5">
+      <div class="order-2 order-md-1 col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
         <h1 class="my-5 display-5 fw-bold ls-tight text-primary">
           <span class="text-warning">Total Productive Maintenance (TPM)</span>
         </h1>
@@ -10,8 +10,7 @@
           involving all employees in the maintenance of equipment and machinery.
         </p>
       </div>
-
-      <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
+      <div class="order-1 order-md-2 col-lg-6 mb-5 mb-lg-0 position-relative">
         <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
         <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
         <div class="d-flex justify-content-center align-items-center flex-column h-100">
