--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -1,6 +1,6 @@
-<section class="background-radial-gradient overflow-hidden">
-  <div class="container py-5 px-md-5 text-center text-lg-start">
-    <div class="row gx-lg-5 align-items-center mb-5">
+<section class="background-radial-gradient overflow-hidden p-md-5 py-5">
+  <div class="container p-md-5">
+    <div class="row g-lg-4 align-items-center p-md-5">
       <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
         <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
         <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
-        <h1 class="my-5 display-5 fw-bold ls-tight text-primary">
+        <h1 class="mb-2 display-5 fw-bold ls-tight text-primary">
           <span class="text-warning">Total Productive Maintenance (TPM)</span>
         </h1>
         <p class="mb-4 opacity-70">
