--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -2,12 +2,26 @@
   <div class="container p-md-5">
     <div class="row g-lg-4 align-items-center p-md-5">
       <div class="order-2 order-md-1 col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
-        <h1 class="my-5 display-5 fw-bold ls-tight text-primary">
-          <span class="text-warning">Total Productive Maintenance (TPM)</span>
-        </h1>
+
         <p class="mb-4 opacity-70">
-          Total Productive Maintenance (TPM) is a management approach focused on maximizing the efficiency and effectiveness of production processes in manufacturing industries. It aims to achieve zero breakdowns, zero defects, and zero accidents by
-          involving all employees in the maintenance of equipment and machinery.
+          Discover a world of Total Productive Maintenance (TPM), designed just for you. By signing up, you’ll gain access to:
+          <ul class="list-unstyled opacity-70">
+            <li class="mb-1">
+              <i class="fas fa-check-circle me-2 text-success"></i><strong>Exclusive Content</strong>: Stay ahead with the latest updates, expert insights, and best practices in TPM.
+            </li>
+            <li class="mb-1">
+              <i class="fas fa-check-circle me-2 text-success"></i><strong>Personalized Experience</strong>: Tailor your experience to fit your specific maintenance needs and goals.
+            </li>
+            <li class="mb-1">
+              <i class="fas fa-check-circle me-2 text-success"></i><strong>Community Support</strong>: Connect with industry professionals and share your TPM journey.
+            </li>
+            <li class="mb-1">
+              <i class="fas fa-check-circle me-2 text-success"></i><strong>Special Offers</strong>: Enjoy exclusive deals and discounts on TPM resources, training, and tools.
+            </li>
+          </ul>
+          <p class="opacity-70">
+            Join us today and be part of a thriving community that values efficiency, productivity, and continuous improvement in maintenance.
+          </p>
         </p>
       </div>
       <div class="order-1 order-md-2 col-lg-6 mb-5 mb-lg-0 position-relative">
@@ -17,29 +31,13 @@
           <div class="card text-center shadow shadow-3-strong">
 
             <div class="card-body text-start">
+              <h1 class="fw-bold ls-tight text-primary text-center">
+                <span class="text-warning">Total Productive Maintenance (TPM)</span>
+              </h1>
 
-              <p class="card-text">
-                Discover a world of Total Productive Maintenance (TPM), designed just for you. By signing up, you’ll gain access to:
-                <ul class="list-unstyled">
-                  <li class="mb-1">
-                    <i class="fas fa-check-circle me-2 text-success"></i><strong>Exclusive Content</strong>: Stay ahead with the latest updates, expert insights, and best practices in TPM.
-                  </li>
-                  <li class="mb-1">
-                    <i class="fas fa-check-circle me-2 text-success"></i><strong>Personalized Experience</strong>: Tailor your experience to fit your specific maintenance needs and goals.
-                  </li>
-                  <li class="mb-1">
-                    <i class="fas fa-check-circle me-2 text-success"></i><strong>Community Support</strong>: Connect with industry professionals and share your TPM journey.
-                  </li>
-                  <li class="mb-1">
-                    <i class="fas fa-check-circle me-2 text-success"></i><strong>Special Offers</strong>: Enjoy exclusive deals and discounts on TPM resources, training, and tools.
-                  </li>
-                </ul>
-                Join us today and be part of a thriving community that values efficiency, productivity, and continuous improvement in maintenance.
-              </p>
-
-              <h5 class="card-title">Dont miss out—sign up now and start enjoying all the perks we have to offer!</h5>
-              <div class="text-center">
-                <a href="/login" class="btn btn-primary">join us</a>
+              <strong class="card-title mb-5">Dont miss out—sign up now and start enjoying all the perks we have to offer!</strong>
+              <div class="text-center mt-3">
+                <a href="/login" class="btn btn-primary">signin</a>
               </div>
             </div>
             <div class="card-footer text-muted">© 2024 Copyright: <span class="fw-bold text-muted">karimroy</span></div>
