--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -19,9 +19,7 @@
               <i class="fas fa-check-circle me-2 text-success"></i><strong>Special Offers</strong>: Enjoy exclusive deals and discounts on TPM resources, training, and tools.
             </li>
           </ul>
-          <p class="opacity-70">
-            Join us today and be part of a thriving community that values efficiency, productivity, and continuous improvement in maintenance.
-          </p>
+          
         </p>
       </div>
       <div class="order-1 order-md-2 col-lg-6 mb-5 mb-lg-0 position-relative">
@@ -36,9 +34,12 @@
               </h1>
 
               <strong class="card-title mb-5">Dont miss out—sign up now and start enjoying all the perks we have to offer!</strong>
-              <div class="text-center mt-3">
-                <a href="/login" class="btn btn-primary">signin</a>
+              <div class="text-center my-3">
+                <a href="/login" class="btn btn-primary">sign up</a>
               </div>
+              <p class="">
+                Join us today and be part of a thriving community that values efficiency, productivity, and continuous improvement in maintenance.
+              </p>
             </div>
             <div class="card-footer text-muted">© 2024 Copyright: <span class="fw-bold text-muted">karimroy</span></div>
           </div>
