--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -37,13 +37,13 @@
                     <!-- Checkbox -->
                     <div class="form-check">
                       <input class="form-check-input" type="checkbox" value="" id="remember" name="remember" checked />
-                      <label class="form-check-label" for="remember"> Remember me </label>
+                      <label class="form-check-label  text-nowrap" for="remember"> Remember me </label>
                     </div>
                   </div>
 
                   <div class="col text-end">
                     <!-- Simple link -->
-                    <a href="/forgot_password">Forgot password?</a>
+                    <a href="/forgot_password" class="text-nowrap">Forgot password?</a>
                   </div>
                 </div>
 
