--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -17,7 +17,11 @@
           <div class="card text-center shadow shadow-3-strong w-100 h-100">
             <div class="card-body text-start">
               <h1 class="w-100 text-end">{{title}}</h1>
-              <p class="w-100 text-end">{{message}}</p>
+              {{#if error}}
+                <div class="alert alert-danger show" id="example" role="alert">
+                  {{message}}
+                </div>
+              {{/if}}
               <form action="/login" method="post">
                 <!-- Email input -->
                 <div data-mdb-input-init class="form-outline mb-4">
@@ -37,7 +41,7 @@
                     <!-- Checkbox -->
                     <div class="form-check">
                       <input class="form-check-input" type="checkbox" value="" id="remember" name="remember" checked />
-                      <label class="form-check-label  text-nowrap" for="remember"> Remember me </label>
+                      <label class="form-check-label text-nowrap" for="remember"> Remember me </label>
                     </div>
                   </div>
 
