--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -201,7 +201,6 @@
   <script src="../../assets/js/core.min.js"></script>
   <script src="../../assets/js/module.min.js"></script>
   {{#each scripts}}
-    <script defer type="text/javascript" src="../assets/js/pages/{{this}}.js"></script>
+    <script type="text/javascript" src="../assets/js/pages/{{this}}.min.js"></script>
   {{/each}}
-
 </html>
