--- a/src/views/dashboard.hbs
+++ b/src/views/dashboard.hbs
@@ -26,7 +26,7 @@
             <i class="fa-duotone fa-cart-flatbed-boxes text-warning fa-3x"></i>
           </div>
           <div class="text-end">
-            <h3 data-dashboard-name="transfers">-</h3>
+            <h3 data-dashboard-name="transfers">{{transfers.count}}</h3>
             <p class="mb-0">Transfers</p>
           </div>
         </div>
@@ -58,7 +58,7 @@
             <i class="fa-duotone fa-user-group text-danger fa-3x"></i>
           </div>
           <div class="text-end">
-            <h3 data-dashboard-name="users">-</h3>
+            <h3 data-dashboard-name="users">{{users.count}}</h3>
             <p class="mb-0">Users</p>
           </div>
         </div>
