--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -7,15 +7,15 @@
     <title>TPM Total Productive Maintenance</title>
     <!-- Search Engine -->
     <meta name="description" content="Form TPM, PAVSE DIGITAL" />
-    <meta name="image" content="../assets/img/ico/android-chrome-192x192.png" />
+    <meta name="image" content="../../assets/img/ico/android-chrome-192x192.png" />
     <!-- Schema.org for Google -->
     <meta itemprop="name" content="PAVSE DIGITAL" />
     <meta itemprop="description" content="Form TPM, PAVSE DIGITAL" />
-    <meta itemprop="image" content="../assets/img/ico/android-chrome-192x192.png" />
+    <meta itemprop="image" content="../../assets/img/ico/android-chrome-192x192.png" />
     <!-- Open Graph general (Facebook, Pinterest & LinkedIn) -->
     <meta property="og:title" content="PAVSE DIGITAL" />
     <meta property="og:description" content="Form TPM, PAVSE DIGITAL " />
-    <meta property="og:image" content="../assets/img/ico/android-chrome-192x192.png" />
+    <meta property="og:image" content="../../assets/img/ico/android-chrome-192x192.png" />
     <meta property="og:url" content="../assets" />
     <meta property="og:site_name" content="PAVSE DIGITAL" />
     <meta property="og:locale" content="en_US" />
@@ -24,16 +24,17 @@
     <meta property="twitter:card" content="summary" />
     <meta property="twitter:title" content="PAVSE DIGITAL" />
     <meta property="twitter:description" content="Form TPM, PAVSE DIGITAL" />
-    <meta property="twitter:image:src" content="../assets/img/ico/android-chrome-192x192.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/ico/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/ico/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/ico/favicon-16x16.png" />
-    <link rel="manifest" href="../assets/img/ico/site.webmanifest" />
+    <meta property="twitter:image:src" content="../../assets/img/ico/android-chrome-192x192.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../../assets/img/ico/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../../assets/img/ico/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../../assets/img/ico/favicon-16x16.png" />
+    <link rel="manifest" href="../../assets/img/ico/site.webmanifest" />
     <link rel="icon" href="img/ico/favicon-32x32.png" type="image/x-icon" />
-    <link rel="icon" href="../assets/img/ico/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="../assets/css/all.min.css" />
-    <link rel="stylesheet" href="../assets/css/core.min.css" />
-    <link rel="stylesheet" href="../assets/css/background.min.css" />
+    <link rel="icon" href="../../assets/img/ico/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="../../assets/css/all.min.css" />
+    <link rel="stylesheet" href="../../assets/css/core.min.css" />
+    <link rel="stylesheet" href="../../assets/css/transfer.min.css" />
+    <link rel="stylesheet" href="../../assets/css/background.min.css" />
   </head>
 
   <body style="background-color: #e8eaf6" class="" data-event-name="{{eventName}}">
@@ -67,12 +68,12 @@
         <!--Main Navigation-->
         <header>
           <!-- Sidenav -->
-          <nav id="sidenav" class="sidenav" data-psa-color="dark" data-psa-mode="side" data-psa-hidden="false" data-psa-scroll-container="#scrollContainer" data-psa-content="#content">
+          <nav id="sidenav" data-psa-sidenav-init class="sidenav sidenav-sm" data-psa-color="dark" data-psa-mode="side" data-psa-hidden="false" data-psa-scroll-container="#scrollContainer" data-psa-content="#content" data-psa-accordion="true">
             <div class="mt-4">
               <div id="header-content" class="ps-2">
-                <div id="name" style="white-space: nowrap; text-transform: uppercase"></div>
-                <div class="small text-muted" id="nik" style="text-transform: uppercase"></div>
-                <div class="small text-muted" id="email"></div>
+                <div id="name" style="white-space: nowrap; text-transform: uppercase">{{firstName}}</div>
+                <div class="small text-muted" id="nik" style="text-transform: uppercase">{{lastName}}</div>
+                <div class="small text-muted" id="email">{{email}}</div>
               </div>
               <hr class="mb-0" />
             </div>
@@ -198,11 +199,14 @@
     </div>
   </div>
 
+  <script type="text/javascript" src="../../assets/js/axios.min.js"></script>
+
   <script type="text/javascript" src="../../assets/js/core.min.js"></script>
 
   <script type="text/javascript" src="../../assets/js/module.min.js"></script>
 
   <script type="text/javascript" src="../../assets/js/index.js"></script>
+
   {{#each scripts}}
     <script type="text/javascript" src="../../assets/js/pages/{{this}}.min.js"></script>
   {{/each}}
